# mizpos

./: .gitignore  .gitmodules  FRONTEND_DEPLOYMENT.md  IMPLEMENTATION.md  LICENSE  Makefile  PLAN-terminal-registration.md  PLAN.md  README.md  ROLE_MANAGEMENT_IMPLEMENTATION.md  claude.md  todo.md
.github/actions/apply/: action.yml
.github/actions/comment/: action.yml
.github/actions/deploy-lambda/: action.yml
.github/actions/setup-aws/: action.yml
.github/actions/setup-frontend/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: build-android-dev.yml  build-android.yml  build-desktop-dev.yml  build-desktop-prod.yml  build-desktop.yml  build-payment-terminal.yml  ci.yml  deploy-dev-frontend.yml  deploy-dev-infrastructure.yml  deploy-frontend-dev.yml  deploy-frontend.yml  deploy-production.yml  deploy-training.yml  deploy.yml  format.yml  initial-setup.yml  setup-admin.yml  setup-training-environment.yml
.turbo/daemon/: 362f5eabc4eb070c-turbo.log.2025-11-16
docs/: TURNSTILE_SETUP.md
frontend/: .biomeignore  .gitignore  README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.vite-react.json  turbo.json
frontend/apps/mizpos-admin/: .cta.json  .env.development  .env.example  .env.production  .gitignore  README.md  index.html  package.json  panda.config.ts  tsconfig.json  vite.config.ts
frontend/apps/mizpos-desktop/: .env.development  .env.production  README.md  index.html  package.json  panda.config.ts  tsconfig.json  vite.config.ts
frontend/apps/mizpos-desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
frontend/apps/mizpos-desktop/src-tauri/dev-icons/: icon.icns
frontend/apps/mizpos-desktop/src-tauri/icons/: icon.icns
frontend/apps/mizpos-desktop/src-tauri/src/: jp_escpos.rs  lib.rs  terminal_auth.rs
frontend/apps/mizpos-online-sales/: .cta.json  .env.development  .env.example  .env.production  .gitignore  README.md  biome.json  index.html  package.json  vite.config.ts
frontend/apps/mizpos-payment-terminal/: README.md  app.config.ts  app.json  eas.json  package.json
frontend/apps/mizpos-website/: .cta.json  .gitignore  index.html  package.json  panda.config.ts  vite.config.js
frontend/mizpos-desktop/src-tauri/: Cargo.toml
frontend/mizpos-online-sales/: package.json  pnpm-lock.yaml
frontend/mizpos-payment-terminal/: app.json  package-lock.json  package.json
frontend/mizpos-payment-terminal/app/: _layout.tsx  pairing.tsx  reader-setup.tsx
frontend/mizpos-payment-terminal/config/: env.ts
frontend/mizpos-payment-terminal/providers/: PairingProvider.tsx  index.ts
frontend_old/mizpos-admin/: .cta.json  index.html  package.json
frontend_old/mizpos-desktop/: package.json
lambda/: README.md
lambda/accounts/: Makefile  __init__.py  auth.py  coupon_services.py  email_service.py  function.jsonnet  main.py  models.py  permissions.py  pos_services.py  pyproject.toml  services.py  terminal_services.py  turnstile.py
lambda/accounts/templates/: base.html  verification.html  verification.txt  welcome.html  welcome.txt
lambda/enterprise/: .gitignore  README.md  __init__.py  android_management_service.py  auth.py  google_auth.py  main.py  models.py  pyproject.toml
lambda/pos/: .lambdaignore  Makefile  __init__.py  auth.py  function.jsonnet  main.py  models.py  pyproject.toml
lambda/pos/services/: sync.py  (+4 more)
lambda/sales/: Makefile  README.md  __init__.py  auth.py  email_service.py  function.jsonnet  main.py  models.py  pyproject.toml  requirements.txt  services.py
lambda/sales/templates/: order_confirmation.html  order_confirmation.txt  shipping_notification.html  shipping_notification.txt
lambda/stock/: Makefile  __init__.py  auth.py  function.jsonnet  isdn.py  main.py  models.py  pyproject.toml  services.py
notebook/: 構成.md
scripts/: README.md  generate-robots-txt.sh  migrate_barcodes.py  seed_training_data.py  setup_admin_user.py  version-manager.sh
terraform/: .gitignore  README.md
terraform/modules/: acm.tf  api_gateway.tf  cdn.tf  cloudflare.tf  cognito.tf  dynamodb.tf  frontend.tf  iam.tf  lambda.tf  main.tf  outputs.tf  secrets.tf  ses.tf  variables.tf
terraform/tf-dev/: .tflint.hcl  main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/tf-prod/: main.tf  outputs.tf  terraform.tfvars  terraform.tfvars.example  variables.tf
terraform/tf-training/: README.md  main.tf  variables.tf
zig/: tfcmt.yml
(+184 files in other folders)
