[project]
name = "accounts"
version = "0.1.0"
description = "アカウント・Role等管理用"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "mangum>=0.19.0",
    "pydantic[email]>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]
