[project]
name = "stripe-online"
version = "0.1.0"
description = "支払い、販売関係のLambda関数（Stipeの登録関連 + 販売時の在庫処理）"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "mangum>=0.19.0",
    "pydantic>=2.9.0",
    "stripe>=11.0.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]
