[project]
name = "stock"
version = "0.1.0"
description = "在庫管理（入出庫）や商品情報管理のためのエンドポイント"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.35.0",
    "fastapi>=0.115.0",
    "mangum>=0.19.0",
    "pydantic>=2.9.0",
    "python-jose[cryptography]>=3.3.0",
    "httpx>=0.27.0",
]
