[package]
name = "mizpos-desktop"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mizpos_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"

# Desktop only dependencies (USB printer support)
[target.'cfg(not(target_os = "android"))'.dependencies]
glib = "^0.21.0"
escpos = { version = "^0.17.0", features = ["native_usb"] }
nusb = "^0.2.1"

# Android dependencies (Bluetooth printer support)
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
